[package]
name = "moxide"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.5"
comrak = "0.32"
futures = "0.3"
im = { version = "15.1", features = ["serde"] }
indexmap = { version = "2.7", features = ["serde"] }
itertools = "0.14"
log = "0.4"
pretty_env_logger = "0.4"
parking_lot = { version = "0.12", features = ["send_guard"] }
rayon = "1.10"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["indexmap"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5"
